Kontaktseite Menü geändert, kleine Styleänderungen

--- a/Über uns.html
+++ b/Über uns.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <div class="wrapper-über-uns">
+<div class="wrapper-über-uns">
 
 
     <header>  <!--Im Header ist die Navigationsleiste untergebracht-->
@@ -19,7 +19,7 @@
       <div class="wrapper_header" >
 
       <!-- Das große Bild am Anfang der Seite -->
-      <div class="FrontPicture-Über-uns">
+      <div class="FrontPicture-Logo">
 
         <div class="navigation-im-frontpicture">
           <div class="topnav" id=myTopnav>
@@ -69,15 +69,16 @@
 
     </header>
     <!--Abschluss des Headerbereichs und der Navigationsleiste-->
-    <main>
-      <!--Hier beginnt der Mainteil der Website-->
+    <main>      <!--Hier beginnt der Mainteil der Website-->
       <div id="main">
+
+
         <div class="aboutus">
 
-          <h1>So fing alles an:</h1>
-          <p>Wir sind ein junges Team rund um Gründer und lieben das Radfahren. Durch das Radfahren haben wir uns auch kennengelernt.</p>
+          <h1 class="ueberschrift-aboutus">So fing alles an:</h1>
+          <p >Wir sind ein junges Team rund um Gründer und lieben das Radfahren. Durch das Radfahren haben wir uns auch kennengelernt.</p>
 
-          <p>Vor nahezu zehn Jahren haben wir uns kennengelernt und schnell herausgefunden, dass wir alle eine Leidenschaft für das Fahhradfahren haben. Um auch größere Touren zusammen absolvieren zu können, hatten wir uns bereits nach
+          <p >Vor nahezu zehn Jahren haben wir uns kennengelernt und schnell herausgefunden, dass wir alle eine Leidenschaft für das Fahhradfahren haben. Um auch größere Touren zusammen absolvieren zu können, hatten wir uns bereits nach
             Elektrofahrrädern umgesehen. Da wir aber schnell gemerkt haben, dass ein Elektrofahrrad in der Anschaffung sehr teuer ist und wir selbst alle Fahrräder im Besitz hatten, die im sehr guten Zustand waren, wurde die Idee geboren. Wir wollten
             unsere Fahrräder mit einem Elektroantrieb ausstatten. Nach kurzer Recherche haben wir gemerkt, dass der Markt keine Möglichkeit bietet Fahrräder umzurüsten, haben wir kurzerhand selbst entschlossen solch einen Antrieb zu entwickeln. </p>
 
@@ -95,7 +96,7 @@
 
           <p>Aber nun genug der Worte, damit Sie ein Bild zu uns haben, werden wir uns kurz Ihnen vorstellen.</p>
 
-          <h1>Das Team:</h1>
+          <h1 class="ueberschrift-aboutus">Das Team:</h1>
 
           <div class="employee">
             <h2>Management</h2>
@@ -147,7 +148,7 @@
           <div class="employee">
             <h2>Compliance</h2>
             <hr>
-            <h3>Daniel Werner.</h3>
+            <h3 >Daniel Werner.</h3>
             <div class="employee-detail">
               <div class="employee-picture">
                 <img src="Daniel_Werner.jpg" alt="Hier sollte eigentlich Daniel sein">
@@ -161,7 +162,7 @@
           </div>
 
           <div class="employee">
-            <h2>Customer Relationsship Management</h2>
+            <h2 >Customer Relationsship Management</h2>
             <hr>
             <h3>Maximilian Rampp.</h3>
             <div class="employee-detail">
@@ -177,6 +178,9 @@
 
         </div>
       </div>
+
+
+
     </main>
     <!--Hier endet der Main Bereich-->
     <footer>
@@ -213,12 +217,12 @@
           </div>
         </div>
       </div>
-
+</div>
 
     </footer>
     <!--Hier endet der Footer Bereich-->
 
-  </div>
+
   <!--Das ist das Ende des Wrappers-->
 
 </body>
