Designänderung Buttons, Produktseite

--- a/Produkt.html
+++ b/Produkt.html
@@ -99,13 +99,13 @@
             <div class="column-50-left">
               <img src="Bikestail_Motor_480x480px.png" alt="Motor Bikestail" width="350" height="500">
             </div>
-            <div class="column-50-right">
+            <div class="column-50-right m-t-35">
               <h2> Kompakt und powervoll </h2>
               <p> Mit dem leistungsstarken Motor im Aluminiumgehäuse verwandelst Du dein Fahrrad in wenigen Minuten zum E-Bike!
                   Der Motor ist für jedes Fahrrad geeignet und kann in wenigen Minuten installiert und wieder entfernt werden.
                   Außerdem ist er wasserdicht und benötigt keine Wartung.
               </p>
-              <button class="read_more_button" style?="background-color:blue"> Für nur 540,00 € </button>
+              <button class="preis_button" style?="background-color:blue"> Für nur 540,00 € </button>
             </div>
           </div>
         </div>
@@ -114,7 +114,7 @@
         <!-- 2 columns Produktinfos mit rechts Bild links Text -->
         <div class="container-2">
           <div class="row">
-            <div class="column-50-left">
+            <div class="column-50-left m-t-35">
               <h2> Das Komplettpaket </h2>
               <p> Mit diesem Set werden Sie Ihren Fahrspaß auf ein neues Level heben. </br> Enthalten sind: </p>
               <ul>
@@ -130,6 +130,23 @@
               alt="Produktbild Bikestail" width="350" height="500">
             </div>
           </div>
+      </div>
+
+      <div class="white-gap">
+  			<h3 class="text-center"> Flexibel montieren und transportieren </h3>
+  		</div>
+
+      <!-- 1 column Produktinfos Montagevideo -->
+      <div class="container-2">
+      	<div class="row">
+      		<div class="column-center">
+      			<h2> Einfache Montage </h2>
+      				<iframe width="560" height="315" src="https://www.youtube.com/embed/w0DfelncDHI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+      				</iframe>
+
+      		</div>
+
+      	</div>
       </div>
 
       <!-- Der Container für die Tabelle mit den technischen Daten  -->
@@ -177,18 +194,7 @@
         </div>
       </div>
 
-      <!-- 1 column Produktinfos Montagevideo -->
-      <div class="container-2">
-      	<div class="row">
-      		<div class="column-center">
-      			<h1> Einfache Montage </h1>
-      				<iframe width="560" height="315" src="https://www.youtube.com/embed/w0DfelncDHI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-      				</iframe>
 
-      		</div>
-
-      	</div>
-      </div>
     </div>  <!-- schließender div Block für Wrapper der Container  -->
 
 		<!-- hier endet Bikestail  -->
@@ -233,7 +239,7 @@
 								</p>
 							</div>
 						</div>
-						<button class="read_more_button" style?="background-color:blue"> Für nur 973,00 € </button>
+						<button class="preis_button" style?="background-color:blue"> Für nur 973,00 € </button>
 					</div>
 				</div>
 			</div>
@@ -241,7 +247,7 @@
 		</div>
 
 		<!-- 2 columns Produktinfos mit rechts Bild links Text -->
-		<div class="container-produktdaten">
+		<div class="container-2">
 			<div class="row">
 				<div class="column-50-left">
 					<h3>Die neue Motorgeneration</h3>
@@ -258,7 +264,7 @@
 			<h3 class="text-center">Die neue Motorgeneration für maximalen Fahrspaß</h3>
 		</div>
 
-		<div class="container-produktdaten">
+		<div class="container-2">
 			<div class="row">
 				<div class="column-50-left">
 					<img src="video 2.gif" alt="Leute im Fahrrad" width="500" height="700" class="m-t-35">
@@ -275,7 +281,7 @@
 
 		<div class="container-technische-daten">
 			<div class="row">
-				<h4>Technische Daten </h4>
+				<h2>Technische Daten </h2>
 				<table>
 				  <tr>
 					<td>Leistung</td>
@@ -358,7 +364,7 @@
 								</p>
 							</div>
 						</div>
-						<button class="read_more_button" style?="background-color:blue"> Für nur 2.134,00 € </button>
+						<button class="preis_button" style?="background-color:blue"> Für nur 2.134,00 € </button>
 					</div>
 				</div>
 			</div>
@@ -366,7 +372,7 @@
 		</div>
 
 		<!-- 2 columns Produktinfos mit rechts Bild links Text -->
-		<div class="container-produktdaten">
+		<div class="container-2">
 			<div class="row">
 				<div class="column-50-left">
 					<h3>Einer für alle.</h3>
@@ -383,7 +389,7 @@
 			<h3 class="text-center">Die neue Motorgeneration für maximalen Fahrspaß</h3>
 		</div>
 
-		<div class="container-produktdaten">
+		<div class="container-2">
 			<div class="row">
 				<div class="column-50-left">
 					<img src="video 5.gif" alt="Leute im Fahrrad" width="500" height="700" class="m-t-35">
@@ -400,7 +406,7 @@
 
 		<div class="container-technische-daten">
 			<div class="row">
-				<h4>Technische Daten </h4>
+				<h2>Technische Daten </h2>
 				<table>
 				  <tr>
 					<td>Leistung</td>
