Designänderung Über uns Seite

--- a/Über uns.html
+++ b/Über uns.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<div class="wrapper-über-uns">
+<!-- <div class="wrapper-über-uns"> -->
 
 
     <header>  <!--Im Header ist die Navigationsleiste untergebracht-->
@@ -73,9 +73,11 @@
       <div id="main">
 
 
+        <h1 class="separator">So fing alles an </h1>
         <div class="aboutus">
 
-          <h1 class="ueberschrift-aboutus">So fing alles an:</h1>
+
+          <!-- <h1 class="ueberschrift-aboutus">So fing alles an:</h1> -->
           <p >Wir sind ein junges Team rund um Gründer und lieben das Radfahren. Durch das Radfahren haben wir uns auch kennengelernt.</p>
 
           <p >Vor nahezu zehn Jahren haben wir uns kennengelernt und schnell herausgefunden, dass wir alle eine Leidenschaft für das Fahhradfahren haben. Um auch größere Touren zusammen absolvieren zu können, hatten wir uns bereits nach
@@ -88,7 +90,7 @@
           </div>
 
 
-          <p> Durch die hohe Exptertise, welche im Unternehmen von Anfang an vorhanden war, konnten wir schnell Erfolge erzielen. Da unseren Idee schnell in der Bekannschaft und beim lokalen Fahrradhändler des Vertrauens rasch guten Anklang fand,
+          <p> Durch die hohe Expertise, welche im Unternehmen von Anfang an vorhanden war, konnten wir schnell Erfolge erzielen. Da unseren Idee schnell in der Bekannschaft und beim lokalen Fahrradhändler des Vertrauens rasch guten Anklang fand,
             haben wir uns bei der TV-Show, die Höhle der Löwen beworben. Auch hier hat unsere Idee die Neugier der Investoren geweckt. Durch die weitere Unterstützung konnten wir unser Produkt weiter verbessern und nun sehen Sie das fertige und
             haben wir uns bei der TV-Show, die Höhle der Löwen beworben. Auch hier hat unsere Idee die Neugier der Investoren geweckt. Durch die weitere Unterstützung konnten wir unseren Traum zur Wirklichkeit machen und das Produkt weiter
             verbessern. Nach der Höhle der Löwen erfolgte die Gründung unsere Firma. Nach weiteren Monaten und der Hilfe der Löwen konnten wir unser Produkt so fertistellen wie wir es wollten und Sie es verdienen. Hier sehen Sie das fertige und
@@ -96,7 +98,12 @@
 
           <p>Aber nun genug der Worte, damit Sie ein Bild zu uns haben, werden wir uns kurz Ihnen vorstellen.</p>
 
-          <h1 class="ueberschrift-aboutus">Das Team:</h1>
+        </div>
+
+          <!-- <h1 class="ueberschrift-aboutus">Das Team:</h1> -->
+
+          <h1 class="separator"> Das Team</h1>
+          <div class="aboutus">
 
           <div class="employee">
             <h2>Management</h2>
@@ -177,7 +184,9 @@
           </div>
 
         </div>
-      </div>
+
+        </div>
+      <!-- </div> -->
 
 
 
