Schrift geändert (von googlefont.com)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Bikepower - Home</title>
     <link rel="stylesheet" href="style.css">
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -84,13 +87,14 @@
           -->
 
                 <!-- der Trennstreifen -->
-                <h1 class="separator"> Unsere Komplett-Sets </h1>
+                <h1 class="separator"> Keine Lust mehr auf ein gewöhnliches Fahrrad? </h1>
                 <!-- Container mit Produkten  -->
 
                 <div class="wrapper_für_container">
                     <!--Wrapper damit bei sehr großen Bildschirmen die Spalten nicht zu weit nach außen rutschen  -->
 
-                    <h2 class="werbespruch-startseite"> Wie bieten Ihnen Komplett-Sets in verschiedenen Preisklassen mit denen Sie ihr Fahrrad selbst zu einem leistungsstarken E-Bike umrüsten können!
+                    <h2 class="werbespruch-startseite">
+                      Wir bieten Ihnen Komplett-Sets in verschiedenen Preisklassen mit denen Sie ihr Fahrrad </br> selbst zu einem leistungsstarken E-Bike umrüsten können!
                     </h2>
 
                     <div class="container-startseite-mit-3-spalten">
