Tabelle der technischen Daten kleiner gemacht

--- a/Produkt.html
+++ b/Produkt.html
@@ -153,6 +153,7 @@
       <div class="container-technische-daten">
         <div class="row">
           <h2>Technische Daten </h2>
+          <div class="technical_data">
           <table>
             <tr>
             <td>Leistung</td>
@@ -191,6 +192,7 @@
             <td>80 x 190 mm (D x H)</td>
             </tr>
           </table>
+        </div>
         </div>
       </div>
 
@@ -282,6 +284,7 @@
 		<div class="container-technische-daten">
 			<div class="row">
 				<h2>Technische Daten </h2>
+        <div class="technical_data">
 				<table>
 				  <tr>
 					<td>Leistung</td>
@@ -320,6 +323,7 @@
 					<td>80 x 190 mm (D x H)</td>
 				  </tr>
 				</table>
+        </div>
 			</div>
 		</div>
   </div> <!-- schließender div Block für Wrapper der Container  -->
@@ -407,6 +411,7 @@
 		<div class="container-technische-daten">
 			<div class="row">
 				<h2>Technische Daten </h2>
+        <div class="technical_data">
 				<table>
 				  <tr>
 					<td>Leistung</td>
@@ -445,6 +450,7 @@
 					<td>80 x 342 mm (D x H)</td>
 				  </tr>
 				</table>
+        </div>
 			</div>
 		</div>
     </div>
