Werbespruch Startseite angepasst

--- a/index.html
+++ b/index.html
@@ -92,10 +92,11 @@
 
                 <div class="wrapper_für_container">
                     <!--Wrapper damit bei sehr großen Bildschirmen die Spalten nicht zu weit nach außen rutschen  -->
-
-                    <h2 class="werbespruch-startseite">
-                      Wir bieten Ihnen Komplett-Sets in verschiedenen Preisklassen mit denen Sie ihr Fahrrad </br> selbst zu einem leistungsstarken E-Bike umrüsten können!
-                    </h2>
+                    <p class="werbespruch-startseite">
+                      Sie möchten auch einmal größere Touren zusammen mit Ihren Freunden, Ihren Familienmitgliedern oder auch alleine absolvieren, ohne gleich ein E-Bike zu kaufen?
+                      <br> <br>
+                      Wir bieten Ihnen Komplett-Sets in verschiedenen Preisklassen mit denen Sie ihr Fahrrad selbst zu einem leistungsstarken E-Bike umrüsten können!
+                    </p>
 
                     <div class="container-startseite-mit-3-spalten">
                         <div class="row">
