--- a/Kontakt.html
+++ b/Kontakt.html
@@ -201,39 +201,41 @@
     <!--Hier endet der Main Bereich-->
 
     <footer>
-      <!--Hier beginnt der Footer Bereich-->
-      <div class="footer">
-        <div class="footer_content">
-          <div class="column-footer-left">
-            <p> <b>Übersicht</b> </p>
-            <p><a href="index.html">Home</a><br></p>
-            <p><a href="Produkt.html">Produkte</a><br></p>
-            <p><a href="Kontakt.html">Kontakt</a><br></p>
-            <p><a href="Über uns.html">Über uns</a><br></p>
-            <p><a href="datenschutz.html">Datenschutz</a></p>
-          </div>
-          <div class="column-footer-middle">
-            <p> <b>Kontakt</b> </p>
-            <p>Electronic Bikes GmbH</p>
-            <p>Marienstraße 20</p>
-            <p>89518 Heidenheim</p>
-          </div>
-          <div class="column-footer-right">
-            <p><b>Social Media:</b></p>
-            <p>Aktuelle Informationen teilen</p>
-            <p>wir hier mit Ihnen:</p>
-            <div class="social_media">
-              <a href="https://www.facebook.de"><img src="facebook_logo.svg" alt="Hier kommen Sie zu Facebook"></a>
+        <!--Hier beginnt der Footer Bereich-->
+        <div class="footer">
+            <div class="footer_content">
+                <div class="column-footer-left">
+                    <h4>Übersicht:</h4>
+                    <hr>
+                    <p><a href="index.html">Home</a><br></p>
+                    <p><a href="Produkt.html">Produkte</a><br></p>
+                    <p><a href="Kontakt.html">Kontakt</a><br></p>
+                    <p><a href="Über uns.html">Über uns</a><br></p>
+                    <p><a href="datenschutz.html">Datenschutz</a></p>
+                </div>
+                <div class="column-footer-middle">
+                    <h4>Kontakt:</h4>
+                    <hr>
+                    <p>Electronic Bikes GmbH</p>
+                    <p>Marienstraße 20</p>
+                    <p>89518 Heidenheim</p>
+                </div>
+                <div class="column-footer-right">
+                    <h4>Social Media:</h4>
+                    <hr>
+                    <p>News finden Sie hier</p>
+                    <div class="social_media">
+                        <a href="https://www.facebook.de"><img src="facebook_logo.svg" alt="Hier kommen Sie zu Facebook"></a>
+                    </div>
+                    <div class="social_media">
+                        <a href="https://www.instagram.com"><img src="instagram_logo.svg" alt="Hier kommen Sie zu Instagram"></a>
+                    </div>
+                    <div class="social_media">
+                        <a href="https://www.youtube.de"><img src="youtube_logo.svg" alt="Das ist der Youtube Auftritt"></a>
+                    </div>
+                </div>
             </div>
-            <div class="social_media">
-              <a href="https://www.instagram.com"><img src="instagram_logo.svg" alt="Hier kommen Sie zu Instagram"></a>
-            </div>
-            <div class="social_media">
-              <a href="https://www.youtube.de"><img src="youtube_logo.svg" alt="Das ist der Youtube Auftritt"></a>
-            </div>
-          </div>
         </div>
-      </div>
 
 
     </footer>
