--- a/index.html
+++ b/index.html
@@ -214,7 +214,8 @@
             <div class="footer">
                 <div class="footer_content">
                     <div class="column-footer-left">
-                        <p> <b>Übersicht</b> </p>
+                        <h4>Übersicht:</h4>
+                        <hr>
                         <p><a href="index.html">Home</a><br></p>
                         <p><a href="Produkt.html">Produkte</a><br></p>
                         <p><a href="Kontakt.html">Kontakt</a><br></p>
@@ -222,15 +223,16 @@
                         <p><a href="datenschutz.html">Datenschutz</a></p>
                     </div>
                     <div class="column-footer-middle">
-                        <p> <b>Kontakt</b> </p>
+                        <h4>Kontakt:</h4>
+                        <hr>
                         <p>Electronic Bikes GmbH</p>
                         <p>Marienstraße 20</p>
                         <p>89518 Heidenheim</p>
                     </div>
                     <div class="column-footer-right">
-                        <p><b>Social Media:</b></p>
-                        <p>Aktuelle Informationen teilen</p>
-                        <p>wir hier mit Ihnen:</p>
+                        <h4>Social Media:</h4>
+                        <hr>
+                        <p>News finden Sie hier</p>
                         <div class="social_media">
                             <a href="https://www.facebook.de"><img src="facebook_logo.svg" alt="Hier kommen Sie zu Facebook"></a>
                         </div>
