Pre Footer Bild eingefügt

--- a/Kontakt.html
+++ b/Kontakt.html
@@ -200,6 +200,10 @@
     </main>
     <!--Hier endet der Main Bereich-->
 
+    <div class="pre_footer">
+            <img src="AdobeStock_Footer.svg" alt="">
+    </div>
+
     <footer>
         <!--Hier beginnt der Footer Bereich-->
         <div class="footer">
