--- a/datenschutz.html
+++ b/datenschutz.html
@@ -121,7 +121,9 @@
 
     </main>
     <!--Hier endet der Main Bereich-->
-
+    <div class="pre_footer">
+            <img src="AdobeStock_Footer.svg" alt="">
+    </div>
     <footer>
         <!--Hier beginnt der Footer Bereich-->
         <div class="footer">
