--- a/index.html
+++ b/index.html
@@ -208,6 +208,9 @@
         </main>
         <!--Hier endet der Main Bereich-->
 
+        <div class="pre_footer">
+                <img src="AdobeStock_Footer.svg" alt="">
+        </div>
 
         <footer>
             <!--Hier beginnt der Footer Bereich-->
