--- a/Über uns.html
+++ b/Über uns.html
@@ -192,6 +192,11 @@
 
     </main>
     <!--Hier endet der Main Bereich-->
+
+    <div class="pre_footer">
+            <img src="AdobeStock_Footer.svg" alt="">
+    </div>
+
     <footer>
         <!--Hier beginnt der Footer Bereich-->
         <div class="footer">
