--- a/Über uns.html
+++ b/Über uns.html
@@ -75,29 +75,20 @@
 
         <h1 class="separator">So fing alles an </h1>
         <div class="aboutus">
-
-
           <!-- <h1 class="ueberschrift-aboutus">So fing alles an:</h1> -->
-          <p >Wir sind ein junges Team rund um Gründer und lieben das Radfahren. Durch das Radfahren haben wir uns auch kennengelernt.</p>
-
-          <p >Vor nahezu zehn Jahren haben wir uns kennengelernt und schnell herausgefunden, dass wir alle eine Leidenschaft für das Fahhradfahren haben. Um auch größere Touren zusammen absolvieren zu können, hatten wir uns bereits nach
-            Elektrofahrrädern umgesehen. Da wir aber schnell gemerkt haben, dass ein Elektrofahrrad in der Anschaffung sehr teuer ist und wir selbst alle Fahrräder im Besitz hatten, die im sehr guten Zustand waren, wurde die Idee geboren. Wir wollten
-            unsere Fahrräder mit einem Elektroantrieb ausstatten. Nach kurzer Recherche haben wir gemerkt, dass der Markt keine Möglichkeit bietet Fahrräder umzurüsten, haben wir kurzerhand selbst entschlossen solch einen Antrieb zu entwickeln. </p>
-
+          <p>Wir sind ein junges Team rund um Gründer und lieben das Radfahren.</p>
+          <p>Wir haben uns auf einer Radtour in der Nähe von Garmisch-Partenkirchen getroffen und schnell herausgefunden, dass wir alle eine Leidenschaft für das Fahhradfahren haben. Um auch größere Touren zusammen absolvieren zu können, hatten wir uns bereits nach
+            Elektrofahrrädern umgesehen. Da wir aber schnell gemerkt haben, dass ein Elektrofahrrad in der Anschaffung sehr teuer ist und wir selbst alle Fahrräder im Besitz hatten, die im sehr guten Zustand waren, wollten wir unsere Fahrräder mit einem Elektroantrieb ausstatten.
+            Nach kurzer Recherche haben wir gemerkt, dass der Markt keine Möglichkeit bietet Fahrräder umzurüsten, daher haben wir uns dazu entschlossen solch einen Antrieb zu entwickeln. </p>
           <p>Um mit den Protoypen zu beginnen, haben wir unsere erste Produktionsstätte 2011 in Daniels Garage eröffnet.</p>
           <div class="garage_ueberuns">
             <img src="garage_ueberuns.jpg" alt="In dieser Garage hat alles begonnen.">
           </div>
-
-
-          <p> Durch die hohe Expertise, welche im Unternehmen von Anfang an vorhanden war, konnten wir schnell Erfolge erzielen. Da unseren Idee schnell in der Bekannschaft und beim lokalen Fahrradhändler des Vertrauens rasch guten Anklang fand,
-            haben wir uns bei der TV-Show, die Höhle der Löwen beworben. Auch hier hat unsere Idee die Neugier der Investoren geweckt. Durch die weitere Unterstützung konnten wir unser Produkt weiter verbessern und nun sehen Sie das fertige und
+          <p>Durch die hohe Expertise, welche im Unternehmen von Anfang an vorhanden war, konnten wir schnell Erfolge erzielen. Da unseren Idee schnell in der Bekannschaft und beim lokalen Fahrradhändler des Vertrauens rasch guten Anklang fand,
             haben wir uns bei der TV-Show, die Höhle der Löwen beworben. Auch hier hat unsere Idee die Neugier der Investoren geweckt. Durch die weitere Unterstützung konnten wir unseren Traum zur Wirklichkeit machen und das Produkt weiter
-            verbessern. Nach der Höhle der Löwen erfolgte die Gründung unsere Firma. Nach weiteren Monaten und der Hilfe der Löwen konnten wir unser Produkt so fertistellen wie wir es wollten und Sie es verdienen. Hier sehen Sie das fertige und
+            verbessern. Ein paar Monate später und mit der Hilfe der Löwen konnten wir unser Produkt so fertigstellen wie wir es wollten und Sie es verdienen. Hier sehen Sie das fertige und
             erprobte Produkt, welches wir Ihnen voller Stolz anbieten können.</p>
-
-          <p>Aber nun genug der Worte, damit Sie ein Bild zu uns haben, werden wir uns kurz Ihnen vorstellen.</p>
-
+          
         </div>
 
           <!-- <h1 class="ueberschrift-aboutus">Das Team:</h1> -->
